--- a/package.json
+++ b/package.json
@@ -3,41 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-google-maps/api": "^2.18.1",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/lodash": "^4.14.192",
-    "@types/node": "^16.18.23",
+    "@types/node": "^16.18.16",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@types/react-geocode": "^0.2.1",
     "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.3.3",
-    "dotenv": "^16.0.3",
-    "fs": "^0.0.1-security",
-    "google-map-react": "^2.2.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-geocode": "^0.2.3",
-    "react-google-maps": "^9.4.5",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "sass": "^1.59.3",
     "typescript": "^4.9.5",
     "usehooks-ts": "^2.9.1",
-    "web-vitals": "^2.1.4",
-    "yarn": "^1.22.19"
-  },
-  "browser": {
-    "fs": false,
-    "os": false,
-    "path": false
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
