--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@types/jest": "^27.5.2",
     "@types/lodash": "^4.14.192",
     "@types/node": "^16.18.16",
+    "@types/node-sass": "^4.11.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-geocode": "^0.2.1",
     "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.3.3",
     "lodash": "^4.17.21",
+    "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-geocode": "^0.2.3",
@@ -28,7 +30,8 @@
     "sass": "^1.59.3",
     "typescript": "^4.9.5",
     "usehooks-ts": "^2.9.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "start": "react-scripts start",
