--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-geocode": "^0.2.1",
     "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.3.5",
     "lodash": "^4.17.21",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
