--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@types/react-dom": "^18.0.11",
     "@types/react-geocode": "^0.2.1",
     "@types/react-icons": "^3.0.0",
+    "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
+    "@types/redux-thunk": "^2.1.0",
     "axios": "^1.3.5",
     "lodash": "^4.17.21",
     "node-sass": "^8.0.0",
