--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-useanimations": "^2.10.0",
     "sass": "^1.59.3",
     "typescript": "^4.9.5",
     "usehooks-ts": "^2.9.1",
