--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-scripts": "5.0.1",
     "react-useanimations": "^2.10.0",
     "sass": "^1.59.3",
+    "socket.io-client": "^4.7.1",
     "typescript": "^4.9.5",
     "usehooks-ts": "^2.9.1",
     "web-vitals": "^2.1.4",
